--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "scripts/main.js",
   "scripts": {
-    "start": "concurrently \"yarn watch:sass\" \"yarn serve\"",
+    "dev": "concurrently \"yarn watch:sass\" \"yarn serve\"",
     "serve": "browser-sync start --server --files 'styles/*.css, scripts/*.js, index.html' --port 3001",
     "watch:sass": "nodemon --watch styles --ext scss --exec 'sass styles/main.scss styles/main.css'",
     "build:css": "sass styles/main.scss dist/styles/main.css",
