--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,33 @@
 [build]
   command = "yarn build"
   publish = "dist"
+
+[[redirects]]
+  from = "/diensten"
+  to = "/diensten.html"
+  status = 200
+
+[[redirects]]
+  from = "/over"
+  to = "/over.html"
+  status = 200
+
+[[redirects]]
+  from = "/contact"
+  to = "/contact.html"
+  status = 200
+
+[[redirects]]
+  from = "/diensten.html"
+  to = "/diensten"
+  status = 301
+
+[[redirects]]
+  from = "/over.html"
+  to = "/over"
+  status = 301
+
+[[redirects]]
+  from = "/contact.html"
+  to = "/contact"
+  status = 301
