Remove .html extensions from URLs for clean routing
- Update netlify.toml to redirect .html URLs to clean URLs and rewrite clean URLs to .html files
- Update bs-config.js to handle root path and all routes without .html extensions
- Remove .html extensions from all internal links in HTML files
- URLs now work without .html extensions on both localhost and production

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,21 +6,6 @@
   NODE_VERSION = "20"
 
 [[redirects]]
-  from = "/diensten"
-  to = "/diensten.html"
-  status = 200
-
-[[redirects]]
-  from = "/over"
-  to = "/over.html"
-  status = 200
-
-[[redirects]]
-  from = "/contact"
-  to = "/contact.html"
-  status = 200
-
-[[redirects]]
   from = "/diensten.html"
   to = "/diensten"
   status = 301
@@ -34,3 +19,23 @@
   from = "/contact.html"
   to = "/contact"
   status = 301
+
+[[redirects]]
+  from = "/index.html"
+  to = "/"
+  status = 301
+
+[[redirects]]
+  from = "/diensten"
+  to = "/diensten.html"
+  status = 200
+
+[[redirects]]
+  from = "/over"
+  to = "/over.html"
+  status = 200
+
+[[redirects]]
+  from = "/contact"
+  to = "/contact.html"
+  status = 200
