--- a/package.json
+++ b/package.json
@@ -11,17 +11,12 @@
     "build": "yarn build:css && yarn build:copy"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-router-dom": "^7.11.0",
     "sass": "^1.85.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^5.1.2",
     "browser-sync": "^2.27.7",
     "concurrently": "^9.1.2",
-    "nodemon": "^2.0.15",
-    "vite": "^7.3.0"
+    "nodemon": "^2.0.15"
   },
   "license": "MIT"
 }
